Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96123

Wrong character

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P5: Not important
    • 6.3.0 Alpha
    • 6.1
    • Examples and Demos
    • None
    • linux and windows
    • All
    • f10ec04a6c9249ec7fad1d661bbb85610dd6d6f1 (qt/qtbase/dev)

    Description

      Both 'First name' and 'Last name' are two word,  it has to be written'FirstName' and 'LastName'  in code

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            talgc gou chao
            talgc gou chao
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes