SQL browser example: fix typo

Both 'First name' and 'Last name' are two words, therefore
the column names should be spelled 'FirstName' and 'LastName'.

Fixes: QTBUG-96123
Change-Id: Iaf58442eba0bc5eb63dcde83ecdebdc4a3c658a5
Reviewed-by: Giuseppe D'Angelo <giuseppe.dangelo@kdab.com>